# refiner-agent-vertex

./: .env.example  .flaskenv  .gitignore  README.md  pyproject.toml  test_debug.py
agent_deploy/: local.py
backend/: main.py  middleware.py  object_handlers.py  simple_formatter.py  validation.py
backend/static/: index.html
refiner_agent/: agent.py  agents-reference.md  config.py  orchestrator.py  schemas.py  tools.py
refiner_agent/subagents/critique/: agent.py  tools.py
refiner_agent/subagents/generator/: agent.py
refiner_agent/subagents/input_collector/: agent.py  tools.py
refiner_agent/subagents/refiner/: agent.py
